[gd_scene load_steps=3 format=3 uid="uid://ctfc5iuce0m8k"]

[ext_resource type="Script" path="res://scenes/ui/defeat_screen.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/monogram.ttf" id="2_font"]

[node name="DefeatScreen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0, 0, 0.9)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(320, 220)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.545098, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "DEFEAT..."
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Your forces have fallen."
horizontal_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Retry Battle"

[node name="ReturnButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBox/ButtonsContainer"]
custom_minimum_size = Vector2(200, 36)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Return to Town"
